--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "just-flatten-it": "^2.0.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1"
   },
