--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vue/cli-service": "^3.0.0-beta.15",
     "autoprefixer": "^8.6.5",
     "postcss-calc": "^6.0.1",
+    "postcss-color-function": "^4.0.1",
     "postcss-loader": "^2.1.5",
     "postcss-plugin-px2rem": "^0.7.0",
     "precss": "^3.1.2",
