--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "normalize.css": "^8.0.0",
     "uniq": "^1.0.1",
     "vue": "^2.5.16",
+    "vue-headful": "^2.0.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
