--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "just-range": "^2.0.0",
     "ml-combinations": "^1.0.1",
     "normalize.css": "^8.0.0",
+    "scroll-into-view": "^1.9.3",
     "uniq": "^1.0.1",
     "vue": "^2.5.16",
     "vue-headful": "^2.0.1",
