--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "",
-  "short_name": "",
+  "name": "PokeQuest Wiki",
+  "short_name": "PokeQuest WIki",
   "icons": [
     {
       "src": "/img/icons/android-chrome-192x192.png",
@@ -15,6 +15,6 @@
   ],
   "start_url": "/index.html",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#4DBA87"
+  "background_color": "#f2e3c5",
+  "theme_color": "#f2e3c5"
 }
