--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "fastclick": "^1.0.6",
+    "just-debounce-it": "^1.0.1",
     "just-flatten-it": "^2.0.0",
     "just-range": "^2.0.0",
     "ml-combinations": "^1.0.1",
     "normalize.css": "^8.0.0",
     "register-service-worker": "^1.0.0",
+    "scroll": "^2.0.3",
     "scroll-into-view": "^1.9.3",
     "uniq": "^1.0.1",
     "vue": "^2.5.16",
