--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "PokeQuest Wiki",
-  "short_name": "PokeQuest WIki",
+  "short_name": "PokeQuest Wiki",
   "icons": [
     {
       "src": "/static/img/icons/android-chrome-192x192.png",
