--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "just-range": "^2.0.0",
     "ml-combinations": "^1.0.1",
     "normalize.css": "^8.0.0",
+    "nprogress": "^0.2.0",
     "register-service-worker": "^1.0.0",
     "scroll": "^2.0.3",
     "scroll-into-view": "^1.9.3",
@@ -30,6 +31,7 @@
     "@vue/cli-plugin-pwa": "^3.0.0-rc.5",
     "@vue/cli-service": "^3.0.0-beta.15",
     "autoprefixer": "^8.6.5",
+    "bundle-loader": "^0.5.6",
     "gh-pages": "^1.2.0",
     "postcss-calc": "^6.0.1",
     "postcss-color-function": "^4.0.1",
