--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "autoprefixer": "^8.6.5",
     "bundle-loader": "^0.5.6",
     "gh-pages": "^1.2.0",
+    "git-rev-sync": "^1.12.0",
     "postcss-calc": "^6.0.1",
     "postcss-color-function": "^4.0.1",
     "postcss-loader": "^2.1.5",
