--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue": "^2.5.16",
     "vue-analytics": "^5.12.2",
     "vue-headful": "^2.0.1",
+    "vue-i18n": "^8.0.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
