feat: improve performance and accessibility

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "PokeQuest Wiki",
-  "short_name": "PokeQuest Wiki",
+  "short_name": "PQ Wiki",
   "icons": [
     {
       "src": "/static/img/icons/android-chrome-192x192.png",
