feat: add moves list page

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fastclick": "^1.0.6",
     "just-debounce-it": "^1.0.1",
     "just-flatten-it": "^2.0.0",
+    "just-omit": "^1.0.1",
     "just-range": "^2.0.0",
     "ml-combinations": "^1.1.0",
     "normalize.css": "^8.0.0",
