--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "eruda": "^1.5.0",
     "fastclick": "^1.0.6",
-    "just-debounce-it": "^1.0.1",
     "just-flatten-it": "^2.0.0",
     "just-omit": "^1.0.1",
     "just-range": "^2.0.0",
+    "just-throttle": "^1.0.2",
     "ml-combinations": "^1.1.0",
     "normalize.css": "^8.0.0",
     "nprogress": "^0.2.0",
